Informacion persona logueada

--- a/VC_p6/VC_P6_deepface_kfold.ipynb
+++ b/VC_p6/VC_P6_deepface_kfold.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "pediatric-audit",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-05 15:58:15.525458: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "criminal-negative",
    "metadata": {},
    "outputs": [],
@@ -91,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "favorite-barbados",
    "metadata": {},
    "outputs": [],
@@ -204,10 +213,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "restricted-pursuit",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "facenet_weights.h5 will be downloaded...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From: https://github.com/serengil/deepface_models/releases/download/v1.0/facenet_weights.h5\n",
+      "To: /Users/omar/.deepface/weights/facenet_weights.h5\n",
+      "100%|██████████| 92.2M/92.2M [00:20<00:00, 4.42MB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading dataset\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'C:/Users/otsed/Desktop/Docencia/VC/DatabaseGender59x65'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb Celda 6\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#W5sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m folder \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mC:/Users/otsed/Desktop/Docencia/VC/DatabaseGender59x65\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m#portátil\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#W5sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mLoading dataset\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#W5sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m X, Y, nsamples, class_name, nperclass, classlabels, width, height \u001b[39m=\u001b[39m LoadDataset(folder,\u001b[39m'\u001b[39m\u001b[39m.jpg\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#W5sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m#Convierte a numpy array X e Y\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#W5sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m X \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(X,dtype\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mfloat32\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32m/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb Celda 6\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#W5sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m preprocessing \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#W5sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m \u001b[39m# Asume que en la ruta indicada hay una subcarpeta por clase\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#W5sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39mfor\u001b[39;00m class_name \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39mlistdir(folder):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#W5sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m     \u001b[39m# Cada subcarpeta implica una clase más\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#W5sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m     nclasses \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#W5sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m     \u001b[39m# Inicialmente esta clase no tiene muestras\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:/Users/otsed/Desktop/Docencia/VC/DatabaseGender59x65'"
+     ]
+    }
+   ],
    "source": [
     "# Modelos disponibles ['VGG-Face', 'Facenet', 'OpenFace', 'DeepFace', 'DeepID', 'Dlib']\n",
     "model = DeepFace.build_model(\"Facenet\")\n",
@@ -282,10 +328,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "meaning-jenny",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'kfold' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb Celda 10\u001b[0m line \u001b[0;36m8\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# Recorre folds\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m fold \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mwhile\u001b[39;00m fold \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m kfold:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#X12sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     accs, precs, recs \u001b[39m=\u001b[39m [], [], []\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#X12sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mfor\u001b[39;00m train_index, test_index \u001b[39min\u001b[39;00m skf\u001b[39m.\u001b[39msplit(X, Y):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/omar/Desktop/VC/VC/VC_p6/VC_P6_deepface_kfold.ipynb#X12sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         \u001b[39m#print(\"TRAIN:\", train_index, \"TEST:\", test_index)\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'kfold' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Embeddings\n",
     "precs_facenet_svm, recs_facenet_svm = [], []\n",
