--- a/VC_p6/Demo_BuscaParecidos.ipynb
+++ b/VC_p6/Demo_BuscaParecidos.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-12-06 17:56:27.633288: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import time\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,11 +381,14 @@
     "        print('Camera 2')\n",
     "        \n",
     "    #Set camera resolution\n",
-    "    cap.set(3,640);\n",
-    "    cap.set(4,480);\n",
+    "    cap.set(3,640)\n",
+    "    cap.set(4,480)\n",
     "\n",
     "    # Initializations\n",
     "\n",
+    "    # Nombre de la foto coincidente\n",
+    "    foto_coincidente = None\n",
+    "    register = False\n",
     "\n",
     "    while True:\n",
     "        arr = []\n",
@@ -440,11 +452,17 @@
     "                            # Comprobamos que de todas las imágenes registradas, la que más parecido tiene,\n",
     "                            # tiene una similitud superior al 60%\n",
     "                            if (np.max(arr) > 0.80): \n",
+    "                                # Guardar el nombre de la foto coincidente\n",
+    "                                idx_similar = np.argmax(arr)\n",
+    "                                foto_coincidente = files[idx_similar]\n",
+    "\n",
     "                                register = True  \n",
     "                                cap.release()\n",
     "                                cv2.destroyAllWindows()    \n",
-    "                                return register          \n",
-    "                            else : register = False\n",
+    "                                return register, foto_coincidente         \n",
+    "                            else : \n",
+    "                                register = False\n",
+    "                                return register, foto_coincidente \n",
     "                else:\n",
     "                    ResetDetectionCounters()\n",
     "            else:\n",
@@ -465,7 +483,8 @@
     "\n",
     "    # Close windows and release camera\n",
     "    cap.release()\n",
-    "    cv2.destroyAllWindows()"
+    "    cv2.destroyAllWindows()\n",
+    "    return register, foto_coincidente "
    ]
   },
   {
@@ -474,11 +493,54 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (1060187603.py, line 31)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[7], line 31\u001b[1;36m\u001b[0m\n\u001b[1;33m    fid = open(\"C:\\Users\\guill\\OneDrive\\Documentos\\UTKFace_DLIB_Nyoki.obj\", \"rb\") #Modelo reducido\u001b[0m\n\u001b[1;37m                                                                          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading model\n",
+      ".DS_Store\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/omar/anaconda3/envs/VC_P1/lib/python3.11/tkinter/__init__.py\", line 1948, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"/var/folders/vl/28jrcvb52hnc7x_l05r2_0gh0000gn/T/ipykernel_5582/3594785750.py\", line 46, in iniciar_sesion\n",
+      "    result, nombre_foto = login()\n",
+      "                          ^^^^^^^\n",
+      "  File \"/var/folders/vl/28jrcvb52hnc7x_l05r2_0gh0000gn/T/ipykernel_5582/1322062267.py\", line 19, in login\n",
+      "    B, G, R = cv2.split(imgReg)\n",
+      "    ^^^^^^^\n",
+      "ValueError: not enough values to unpack (expected 3, got 0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".DS_Store\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/omar/anaconda3/envs/VC_P1/lib/python3.11/tkinter/__init__.py\", line 1948, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"/var/folders/vl/28jrcvb52hnc7x_l05r2_0gh0000gn/T/ipykernel_5582/3594785750.py\", line 70, in register\n",
+      "    usuario_repetido = login()\n",
+      "                       ^^^^^^^\n",
+      "  File \"/var/folders/vl/28jrcvb52hnc7x_l05r2_0gh0000gn/T/ipykernel_5582/1322062267.py\", line 19, in login\n",
+      "    B, G, R = cv2.split(imgReg)\n",
+      "    ^^^^^^^\n",
+      "ValueError: not enough values to unpack (expected 3, got 0)\n"
      ]
     }
    ],
@@ -513,7 +575,7 @@
     "#Load appearance dataset\n",
     "print(\"Reading model\")\n",
     "#MODIFICAR EN BASE A TU RUTA\n",
-    "fid = open(\"C:/Users/guill/OneDrive/Documentos/UTKFace_DLIB_Nyoki.obj\", \"rb\") #Modelo reducido\n",
+    "fid = open(\"./UTKFace_DLIB_Nyoki.obj\", \"rb\") #Modelo reducido\n",
     "#fid = open(\"E:/FACEScode_models/UTKFace_DLIB_Nyoki.obj\", \"rb\") # Entrenado similar a normalización Nyoki con 20k\n",
     "#fid = open(\"D:/FACEScode_models/UTKFace_DLIB_Nyoki_deepfaceSP2021.obj\", \"rb\") # Entrenado similar a normalización Nyoki con 2k\n",
     "nimgs, X_FN, embsFN, Age, Gender, Etnia = pickle.load(fid)\n",
@@ -527,13 +589,25 @@
     "# Fonts\n",
     "font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "\n",
-    "\n",
-    "\n",
     "def iniciar_sesion():\n",
-    "    result = login()\n",
+    "    result, nombre_foto = login()\n",
+    "\n",
     "    if result == True:\n",
-    "        messagebox.showinfo(\"Login\", \"Te logeaste con exito\")\n",
+    "        ruta_completa = os.path.join(\"./Register/\", nombre_foto)\n",
+    "        obj = DeepFace.analyze(ruta_completa, enforce_detection=False, actions=['age','gender','race','emotion'])\n",
+    "        edad = {obj[0]['age']}\n",
+    "        raza = max({obj[0]['race']})\n",
+    "        genero = max({obj[0]['gender']})\n",
+    "\n",
+    "        #messagebox.showinfo(\"Login\", \"Te logeaste con exito\")\n",
+    "        #informacion = f\"Nombre: {nombre}\\nEdad: {edad}\\nRaza: {raza}\\nGénero: {genero}\"\n",
+    "\n",
+    "        informacion = f\"Te logeaste con exito\\n Nombre: {nombre_foto} \\nEdad: {edad} \\nRaza: {raza}\\nGénero: {genero}\"\n",
+    "        # Mostrar la ventana de información con la información personalizada\n",
+    "        messagebox.showinfo(\"Login\", informacion)\n",
     "        ventana.destroy()\n",
+    "    else:\n",
+    "        messagebox.showinfo(\"Login\", \"Error al loguearse\")\n",
     "\n",
     "    \n",
     "def register():\n",
@@ -594,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
