Mejora codigo VC_Final

--- a/VC_Final/max_velocity_detect.ipynb
+++ b/VC_Final/max_velocity_detect.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,37 +71,53 @@
     "\n",
     "carI ={}\n",
     "carO = {}\n",
-    "\n",
     "class App(tk.Tk):\n",
-    "    def __init__(self, video_source,total_cars,default_max_speed = 60):\n",
+    "    def __init__(self, video_source, total_cars, default_max_speed=60):\n",
     "        tk.Tk.__init__(self)\n",
     "        self.title(\"Marcador de velocidades\")\n",
+    "\n",
+    "        # Estilo ttk\n",
+    "        style = ttk.Style()\n",
+    "        style.configure('TFrame', background='#ececec')\n",
+    "        style.configure('TLabel', background='#ececec', font=('Arial', 10))\n",
+    "        style.configure('TButton', background='#4caf50', font=('Arial', 10))\n",
+    "        self.count_vehicules = 0 \n",
     "        self.max_speed = default_max_speed\n",
-    "        self.current_id = None #Id del coche actual en la zona 3 inicializamos con un valor infinito\n",
-    "        self.total_cars = total_cars # Initialize total_cars as an attribute of the class\n",
-    "        \n",
-    "        # Contenedor para alinear horizontalmente los elementos\n",
-    "        contenedor_horizontal = tk.Frame(self)\n",
-    "        contenedor_horizontal.pack()\n",
+    "        self.current_id = None\n",
+    "        self.total_cars = total_cars\n",
+    "\n",
+    "        # Contenedor principal\n",
+    "        contenedor_principal = ttk.Frame(self)\n",
+    "        contenedor_principal.pack(side=tk.LEFT, anchor=tk.N)\n",
+    "\n",
+    "        # Contenedor para alinear horizontalmente los elementos en la parte izquierda\n",
+    "        contenedor_izquierda = ttk.Frame(contenedor_principal)\n",
+    "        contenedor_izquierda.grid(row=0, column=0, sticky=\"nsew\", padx=5)\n",
     "\n",
     "        # Etiqueta para \"Maxima velocidad permitida\"\n",
-    "        self.text_max_speed = tk.Label(contenedor_horizontal, text=\"Maxima velocidad permitida\")\n",
-    "        self.text_max_speed.pack(side=tk.LEFT, padx=5)\n",
+    "        self.text_max_speed = ttk.Label(contenedor_izquierda, text=\"Maxima velocidad permitida\")\n",
+    "        self.text_max_speed.grid(row=0, column=0, sticky=\"w\", padx=1)\n",
     "\n",
     "        # Entrada para el valor\n",
-    "        self.entrada_entero = tk.Entry(contenedor_horizontal)\n",
-    "        self.entrada_entero.pack(side=tk.LEFT, padx=5)\n",
+    "        self.entrada_entero = ttk.Entry(contenedor_izquierda)\n",
+    "        self.entrada_entero.grid(row=0, column=1, sticky=\"w\", padx=5)\n",
     "\n",
     "        # Botón \"Mostrar Valor\"\n",
-    "        self.boton_mostrar = tk.Button(contenedor_horizontal, text=\"Establecer velocidad máxima\", command=self.validar_entero)\n",
-    "        self.boton_mostrar.pack(side=tk.LEFT, padx=5)\n",
-    "        \n",
-    "        #Panel de ayuda \n",
-    "        self.ayuda_label = tk.Label(contenedor_horizontal, text=\"\", fg=\"red\")\n",
-    "        self.ayuda_label.pack(side=tk.LEFT, padx=5)\n",
+    "        self.boton_mostrar = ttk.Button(contenedor_izquierda, text=\"Establecer velocidad máxima\", command=self.validar_entero)\n",
+    "        self.boton_mostrar.grid(row=0, column=2, sticky=\"w\", pady=5)\n",
     "\n",
-    "        self.count_label = tk.Label(self, text=f\"Coches con velocidad superior a {self.max_speed}: {self.total_cars}\")\n",
-    "        self.count_label.pack()\n",
+    "        # Panel de ayuda\n",
+    "        self.ayuda_label = ttk.Label(contenedor_izquierda, text=\"\", foreground='red')\n",
+    "        self.ayuda_label.grid(row=4, column=0, columnspan=2, pady=5)\n",
+    "\n",
+    "        self.text_count_vehicules = ttk.Label(contenedor_izquierda, text=f\"Numero de vehiculos detectados: {self.count_vehicules}\")\n",
+    "        self.text_count_vehicules.grid(row=1, column=0, sticky=\"w\", padx=1)\n",
+    "\n",
+    "        self.count_label = ttk.Label(contenedor_izquierda, text=f\"Coches con velocidad superior a {self.max_speed}: {self.total_cars}\")\n",
+    "        self.count_label.grid(row=2, column=0, sticky=\"w\", padx=1)\n",
+    "\n",
+    "        self.btn_quit = ttk.Button(contenedor_izquierda, text=\"Salir\", command=self.quit)\n",
+    "        self.btn_quit.grid(row=3, column=0, sticky=\"w\", padx=1)\n",
     "\n",
     "        self.deteccion = cv2.createBackgroundSubtractorMOG2(history=10000, varThreshold=100)\n",
     "        self.cap = cv2.VideoCapture(video_source)\n",
@@ -109,17 +125,23 @@
     "        if not self.cap.isOpened():\n",
     "            print(\"Error al abrir el video\")\n",
     "            exit()\n",
-    "        self.tracker = Tracker()  \n",
-    "        self.canvas = tk.Canvas(self, width=self.cap.get(cv2.CAP_PROP_FRAME_WIDTH), height=self.cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
-    "        self.canvas.pack()\n",
+    "        self.tracker = Tracker()\n",
+    "        self.canvas = tk.Canvas(contenedor_principal, width=self.cap.get(cv2.CAP_PROP_FRAME_WIDTH),\n",
+    "                                height=self.cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "        self.canvas.grid(row=0, column=1, sticky=\"nsew\")\n",
     "\n",
-    "        self.btn_quit = ttk.Button(self, text=\"Salir\", command=self.quit)\n",
-    "        self.btn_quit.pack()\n",
-    "\n",
+    "        # Centrar la ventana en la pantalla\n",
+    "        self.update_idletasks()\n",
+    "        screen_width = self.winfo_screenwidth()\n",
+    "        screen_height = self.winfo_screenheight()\n",
+    "        x_position = (screen_width - self.winfo_width()) // 2\n",
+    "        y_position = (screen_height - self.winfo_height()) // 2\n",
+    "        self.geometry(f\"+{x_position}+{y_position}\")\n",
+    "        \n",
     "        self.update()\n",
-    "\n",
     "    def update(self):\n",
     "        ret, frame = self.cap.read()\n",
+    "\n",
     "        if not ret:\n",
     "            # Si el video ha terminado, volvemos al principio\n",
     "            self.cap.set(cv2.CAP_PROP_POS_FRAMES, 0)\n",
@@ -129,9 +151,11 @@
     "            carI = {}\n",
     "            carO = {}\n",
     "\n",
-    "        result_frame = self.process_frame(frame)\n",
-    "        self.photo = self.convert_frame_to_photo(result_frame)\n",
-    "        self.canvas.create_image(0, 0, anchor=tk.NW, image=self.photo)\n",
+    "        # Verifica que el fotograma no esté vacío antes de procesarlo\n",
+    "        if frame is not None:\n",
+    "            result_frame = self.process_frame(frame)\n",
+    "            self.photo = self.convert_frame_to_photo(result_frame)\n",
+    "            self.canvas.create_image(0, 0, anchor=tk.NW, image=self.photo)\n",
     "\n",
     "        self.after(5, self.update)\n",
     "            \n",
@@ -150,6 +174,7 @@
     "\n",
     "    def process_frame(self, frame):\n",
     "        global carI  \n",
+    "  \n",
     "\n",
     "        ret, frame  = self.cap.read()\n",
     "        if ret == True:\n",
@@ -202,7 +227,7 @@
     "                #Eliminamos contornos pequeño\n",
     "                area = cv2.contourArea(cont)\n",
     "                if area > 400:\n",
-    "                \n",
+    "                    \n",
     "                    x,y, ancho, alto = cv2.boundingRect(cont)\n",
     "                    \n",
     "                    #Guardamos los contornos\n",
@@ -234,6 +259,8 @@
     "                        if id not in carO:\n",
     "                            self.current_id = 1\n",
     "                            carO[id] = tiempo\n",
+    "                            self.count_vehicules = len(carO)\n",
+    "                            self.text_count_vehicules.config(text=f\"Numero de vehiculos detectados: {self.count_vehicules}\")\n",
     "                        if id in carO:\n",
     "                            tiempo = carO[id]\n",
     "                            vel = 100/carO[id]\n",
@@ -282,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
