--- a/VC_Final/max_velocity_detect.ipynb
+++ b/VC_Final/max_velocity_detect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Función change_video ejecutada\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np \n",
@@ -86,6 +94,9 @@
     "        self.current_id = None\n",
     "        self.total_cars = total_cars\n",
     "\n",
+    "        \n",
+    "        self.current_video_index = 0\n",
+    "\n",
     "        # Contenedor principal\n",
     "        contenedor_principal = ttk.Frame(self)\n",
     "        contenedor_principal.pack(side=tk.LEFT, anchor=tk.N)\n",
@@ -105,6 +116,11 @@
     "        # Botón \"Mostrar Valor\"\n",
     "        self.boton_mostrar = ttk.Button(contenedor_izquierda, text=\"Establecer velocidad máxima\", command=self.validar_entero)\n",
     "        self.boton_mostrar.grid(row=0, column=2, sticky=\"w\", pady=5)\n",
+    "\n",
+    "        # Botón para cambiar de video\n",
+    "        self.btn_change_video = ttk.Button(contenedor_izquierda, text=\"Cambiar Video\", command=self.change_video)\n",
+    "        self.btn_change_video.grid(row=3, column=1, sticky=\"w\", padx=5)\n",
+    "\n",
     "\n",
     "        # Panel de ayuda\n",
     "        self.ayuda_label = ttk.Label(contenedor_izquierda, text=\"\", foreground='red')\n",
@@ -139,6 +155,7 @@
     "        self.geometry(f\"+{x_position}+{y_position}\")\n",
     "        \n",
     "        self.update()\n",
+    "\n",
     "    def update(self):\n",
     "        ret, frame = self.cap.read()\n",
     "\n",
@@ -190,9 +207,12 @@
     "            pts = np.array([[[1835,500],[70,500],[70,630],[1835,630]]])\n",
     "            cv2.fillPoly(mask,pts,255)\n",
     "\n",
-    "            area2 = np.array([[[790,520],[1430,520],[1430,620],[790,620]]])\n",
-    "            area3 = np.array([[[120,520],[780,520],[780,620],[120,620]]])\n",
-    "\n",
+    "            if(self.current_video_index == 0):\n",
+    "                area2 = np.array([[[790,520],[1430,520],[1430,620],[790,620]]])\n",
+    "                area3 = np.array([[[120,520],[780,520],[780,620],[120,620]]])\n",
+    "            else:\n",
+    "                area2 = np.array([[[250,375],[250,150],[1000,150],[1000,375]]])\n",
+    "                area3 = np.array([[[250,700],[250,400],[1150,400],[1150,700]]])\n",
     "\n",
     "            cv2.polylines(frame,[np.array(area2,np.int32)], True, (0,0,255),2)\n",
     "            cv2.polylines(frame,[np.array(area3,np.int32)], True, (255,255,0),2)\n",
@@ -286,8 +306,31 @@
     "    def quit(self):\n",
     "        self.cap.release()\n",
     "        self.destroy()\n",
+    "    \n",
+    "    def change_video(self):\n",
+    "        \n",
+    "        print(\"Función change_video ejecutada\")\n",
+    "        self.current_video_index = (self.current_video_index + 1) % len(video_sources)\n",
+    "        new_video_source = video_sources[self.current_video_index]\n",
+    "        \n",
+    "        # Libera la cámara actual y abre la nueva\n",
+    "        self.cap.release()\n",
+    "        self.cap = cv2.VideoCapture(new_video_source)\n",
+    "\n",
+    "        if not self.cap.isOpened():\n",
+    "            print(\"Error al abrir el nuevo video\")\n",
+    "            exit()\n",
+    "\n",
+    "        # Reinicia las variables de seguimiento\n",
+    "        #global carI\n",
+    "        #global carO\n",
+    "        #carI = {}\n",
+    "        #carO = {}\n",
+    "\n",
+    "        \n",
     "\n",
     "if __name__ == \"__main__\":\n",
+    "    video_sources = [\"video.mp4\", \"video2.mp4\"]\n",
     "    app = App(video_source=\"video.mp4\",total_cars = 0)\n",
     "    app.mainloop()\n"
    ]
@@ -309,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
