--- a/VC_Final/max_velocity_detect.ipynb
+++ b/VC_Final/max_velocity_detect.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
+    "import time\n",
     "\n",
     "\n",
     "class Tracker:\n",
@@ -16,6 +17,10 @@
     "        # Keep the count of the IDs\n",
     "        # each time a new object id detected, the count will increase by one\n",
     "        self.id_count = 0\n",
+    "\n",
+    "        # Almacena las posiciones y tiempos previos de los vehículos\n",
+    "        self.prev_positions = {}\n",
+    "\n",
     "\n",
     "    def update(self, objects_rect):\n",
     "        # Objects boxes and ids\n",
@@ -53,12 +58,38 @@
     "\n",
     "        # Update dictionary with IDs not used removed\n",
     "        self.center_points = new_center_points.copy()\n",
-    "        return objects_bbs_ids\n"
+    "\n",
+    "        # Calcular la aceleración\n",
+    "        accelerations = self.calculate_acceleration(objects_bbs_ids)\n",
+    "        return objects_bbs_ids, accelerations\n",
+    "\n",
+    "    def calculate_acceleration(self, objects_bbs_ids):\n",
+    "        accelerations = {}\n",
+    "        current_time = time.process_time()\n",
+    "\n",
+    "        for obj_bb_id in objects_bbs_ids:\n",
+    "            _, _, _, _, object_id = obj_bb_id\n",
+    "            center = self.center_points[object_id]\n",
+    "\n",
+    "            if object_id in self.prev_positions:\n",
+    "                prev_position, prev_time = self.prev_positions[object_id]\n",
+    "                delta_position = math.hypot(center[0] - prev_position[0], center[1] - prev_position[1])\n",
+    "                delta_time = current_time - prev_time\n",
+    "\n",
+    "                if delta_time > 0:\n",
+    "                    velocity = delta_position / delta_time\n",
+    "                    acceleration = velocity / delta_time\n",
+    "                    accelerations[object_id] = acceleration\n",
+    "\n",
+    "            # Actualizar las posiciones y tiempos previos\n",
+    "            self.prev_positions[object_id] = (center, current_time)\n",
+    "\n",
+    "        return accelerations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,6 +97,14 @@
      "output_type": "stream",
      "text": [
       "Función change_video ejecutada\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mEl Kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. Revise el código de las celdas para identificar una posible causa del error. Haga clic <a href='https://aka.ms/vscodeJupyterKernelCrash'>aquí</a> para obtener más información. Vea el [registro] de Jupyter (command:jupyter.viewOutput) para obtener más detalles."
      ]
     }
    ],
@@ -142,8 +181,8 @@
     "            print(\"Error al abrir el video\")\n",
     "            exit()\n",
     "        self.tracker = Tracker()\n",
-    "        self.canvas = tk.Canvas(contenedor_principal, width=self.cap.get(cv2.CAP_PROP_FRAME_WIDTH),\n",
-    "                                height=self.cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "        self.canvas = tk.Canvas(contenedor_principal, width=800, height=600)\n",
+    "\n",
     "        self.canvas.grid(row=0, column=1, sticky=\"nsew\")\n",
     "\n",
     "        # Centrar la ventana en la pantalla\n",
@@ -204,27 +243,23 @@
     "            #Elegimos nuestra zona de interes\n",
     "            #Elegimos los puntos\n",
     "\n",
-    "            pts = np.array([[[1835,500],[70,500],[70,630],[1835,630]]])\n",
-    "            cv2.fillPoly(mask,pts,255)\n",
-    "\n",
     "            if(self.current_video_index == 0):\n",
+    "                pts = np.array([[[1835,500],[70,500],[70,630],[1835,630]]])\n",
     "                area2 = np.array([[[790,520],[1430,520],[1430,620],[790,620]]])\n",
     "                area3 = np.array([[[120,520],[780,520],[780,620],[120,620]]])\n",
     "            else:\n",
+    "                pts = np.array([[[400,100],[1900,100],[1900,1000],[400,1000]]])\n",
     "                area2 = np.array([[[250,375],[250,150],[1000,150],[1000,375]]])\n",
     "                area3 = np.array([[[250,700],[250,400],[1150,400],[1150,700]]])\n",
     "\n",
-    "            cv2.polylines(frame,[np.array(area2,np.int32)], True, (0,0,255),2)\n",
-    "            cv2.polylines(frame,[np.array(area3,np.int32)], True, (255,255,0),2)\n",
+    "            cv2.fillPoly(mask,pts,255)\n",
     "\n",
     "            #Eliminarmos lo que esta afuera de la zona\n",
     "            zona = cv2.bitwise_and(frame,frame,mask=mask)\n",
     "\n",
-    "\n",
-    "\n",
     "            #Eliminamos ruido\n",
     "            mascara = self.deteccion.apply(zona)\n",
-    "            filtro = cv2.GaussianBlur(mascara,(11,11),0)\n",
+    "            filtro = cv2.GaussianBlur(mascara,(13,13),0)\n",
     "            #cv2.imshow(\"zona\",filtro)\n",
     "\n",
     "            #Aplicamos umbralizado\n",
@@ -239,6 +274,7 @@
     "            \n",
     "            contornos, _ = cv2.findContours(cerrar,cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
     "            #cv2.imshow(\"contornos\",filtro)\n",
+    "            \n",
     "            detecciones = []\n",
     "            \n",
     "            #Aplica,os kernel para ajustar los pixeles dispersos\n",
@@ -252,8 +288,9 @@
     "                    \n",
     "                    #Guardamos los contornos\n",
     "                    detecciones.append([x,y,ancho,alto])\n",
-    "            info_id = self.tracker.update(detecciones)\n",
-    "            for inf in info_id:     \n",
+    "            info_id, accelerations = self.tracker.update(detecciones)\n",
+    "\n",
+    "            for inf, acceleration in zip(info_id, accelerations):  \n",
     "                x, y, ancho, alto, id = inf\n",
     "\n",
     "\n",
@@ -283,22 +320,29 @@
     "                            self.text_count_vehicules.config(text=f\"Numero de vehiculos detectados: {self.count_vehicules}\")\n",
     "                        if id in carO:\n",
     "                            tiempo = carO[id]\n",
-    "                            vel = 100/carO[id]\n",
+    "                            vel = 70/carO[id]\n",
     "                            vel = vel * 3.6\n",
     "                            if self.current_id == 1 and int(vel) > int(self.max_speed):\n",
     "                                    self.current_id  = 0\n",
     "                                    self.total_cars += 1\n",
     "                                    self.count_label.config(text=f\"Coches con velocidad superior a {self.max_speed}: {self.total_cars}\")\n",
-    "                            \n",
+    "\n",
+    "\n",
     "\n",
     "                        cv2.rectangle(frame,(x,y-10),(x+ancho, y +alto),(0,0,255),2)\n",
     "                        cv2.putText(frame,str(int(vel))+\"KM/H\",(x,y-35),cv2.FONT_HERSHEY_PLAIN,3,(255,255,255),2)\n",
-    "                       \n",
+    "                        cv2.putText(frame, f\"Aceleration: {acceleration} m/s^2\", (x, y - 70),cv2.FONT_HERSHEY_PLAIN, 2, (255, 255, 255), 2)\n",
+    "\n",
+    "            cv2.polylines(frame,[np.array(area2,np.int32)], True, (0,0,255),2)\n",
+    "            cv2.polylines(frame,[np.array(area3,np.int32)], True, (255,255,0),2)\n",
+    "\n",
+    "\n",
     "\n",
     "        return frame\n",
     "\n",
     "    def convert_frame_to_photo(self, frame):\n",
     "        frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "        frame = cv2.resize(frame, (800, 600))  # Ajusta el tamaño de acuerdo al Canvas\n",
     "        img = Image.fromarray(frame)\n",
     "        photo = ImageTk.PhotoImage(image=img)\n",
     "        return photo\n",
@@ -320,13 +364,6 @@
     "        if not self.cap.isOpened():\n",
     "            print(\"Error al abrir el nuevo video\")\n",
     "            exit()\n",
-    "\n",
-    "        # Reinicia las variables de seguimiento\n",
-    "        #global carI\n",
-    "        #global carO\n",
-    "        #carI = {}\n",
-    "        #carO = {}\n",
-    "\n",
     "        \n",
     "\n",
     "if __name__ == \"__main__\":\n",
